[gd_scene load_steps=4 format=2]

[ext_resource path="res://ui/CustomButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://font/df_normal.tres" type="DynamicFont" id=2]
[ext_resource path="res://scenes/MainMenu.gd" type="Script" id=3]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="lb_sparks" type="Label" parent="."]
margin_left = 38.0
margin_top = 36.0
margin_right = 325.0
margin_bottom = 117.0
custom_fonts/font = ExtResource( 2 )
text = "SPARKS
0"
align = 1

[node name="btn_start" parent="." instance=ExtResource( 1 )]
margin_left = 505.0
margin_top = 171.0
margin_right = 725.0
margin_bottom = 236.0
text = "Start Game"

[node name="btn_shop" parent="." instance=ExtResource( 1 )]
margin_left = 505.0
margin_top = 271.0
margin_right = 725.0
margin_bottom = 336.0
text = "Shop"

[node name="btn_quit" parent="." instance=ExtResource( 1 )]
margin_left = 505.0
margin_top = 373.0
margin_right = 725.0
margin_bottom = 438.0
text = "Quit"
